- Show view number inside the window and not in the window title
- Added pass count to breakpoints (a breakpoint that is triggered when the condition is hit a certain times)
- Improved edit breakpoint window
- Added option to enable/disable all breakpoints
- Fixed moving cursor up when address near 0
- Watches can show results in hexadecimal or decimal

Improve Memory Cheat:
- Allow to set initial address
- Can delete watches
- Improve window layout

Improved ZRCP:
- Allow to set Linemode Telnet (char mode): allow cursor up, backspace, tab, ctrl-c, ctrl-d
- Better CR+LF handling
- Added commands: cd, pwd

Improved External Audio Source window:
- Show frequency when detected pilot tone or bits 0/1
- Show approximate bytes read
- Show average frequency when unknown signal
- Allow to enable input from this window

Improved Hexadecimal editor: follow expression is saved on configuration
Improved maximum sent keys to ZENG/ZENG Online
Improved Windows timing and any other system using SDL video driver. Now uses SDL Timing
Improved Mac timing by using native timer
Improved Watermark Logo: can be shown only when loading/saving, can change colors when loading/saving
Improved Adventure Map showing enter and exit directions
Improved File Selector: allow to use path to a FAT mounted image on all cases
Improved Visual Cassette Tape window: support standard tape too
Improved Custom rom setting adding a Reset machine option
Improved DivMMC, DivIDE and ZXMMC emulation: allow to enable them even if no MMC/SD card or IDE inserted
Improved View Basic window: allow lines > 9999, useful for protected programs

* Fixes:

Fixed semaphore locking on Windows
Fixed cpu usage calculation when footer is disabled
Fixed setting esxdos handler root dir when loading a .nex file without path from command line
Fixed bug restoring ZSF snapshot with DivIDE enabled
Fixed segfault when pressing CTRL-C on console
Fixed PCW palette colour changes
Fixed Chloe keyboard: allow fast text writing