@@ -249,6 +249,7 @@ extern char *zx80_rom_tokens[];
 
 #define DEBUG_MAX_WATCHES 10
 extern token_parser debug_watches_array[DEBUG_MAX_WATCHES][MAX_PARSER_TOKENS_NUM];
+extern char debug_watches_labels_array[DEBUG_MAX_WATCHES][MAX_BREAKPOINT_CONDITION_LENGTH];
 extern void debug_set_watch(int watch_index,char *condicion);
 extern void init_watches_table(void);
 
